--- a/bhumitfinserv/style.css
+++ b/bhumitfinserv/style.css
@@ -22,7 +22,7 @@ header .logo img {
 header .logo h1 {
     display: inline;
     margin-left: 10px;
-    vertical-align: middle;
+vertical-align: middle;
 }
 
 nav ul {
@@ -47,6 +47,7 @@ nav ul li a:hover {
 section {
     padding: 20px;
     margin: 20px 0;
+    margin-top: -13px;
 }
 
 .hero {
@@ -54,19 +55,35 @@ section {
     padding: 50px 20px;
     text-align: center;
 }
+.chooseus {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0;
+}
+.archivements{
+    flex: 1;
+    padding: 20px;
+    background-color: #f0f0f0;
+    margin: 0 10px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
 
 .services-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin: 20px 0;
 }
 
 .service {
-    background: #ffffff;
+    flex: 1;
     padding: 20px;
+    background-color: #f0f0f0;
+    margin: 0 10px;
+    text-align: center;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    margin: 10px;
-    flex-basis: 30%;
 }
+
 
 #contact form {
     display: flex;
