--- a/bhumitfinserv/style.css
+++ b/bhumitfinserv/style.css
@@ -22,7 +22,7 @@ header .logo img {
 header .logo h1 {
     display: inline;
     margin-left: 10px;
-vertical-align: middle;
+    vertical-align: middle;
 }
 
 nav ul {
@@ -55,18 +55,20 @@ section {
     padding: 50px 20px;
     text-align: center;
 }
+
 .chooseus {
     display: flex;
     justify-content: space-between;
     margin: 20px 0;
 }
-.archivements{
+
+.archivements {
     flex: 1;
     padding: 20px;
     background-color: #f0f0f0;
     margin: 0 10px;
     text-align: center;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .services-container {
@@ -81,7 +83,7 @@ section {
     background-color: #f0f0f0;
     margin: 0 10px;
     text-align: center;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 
@@ -94,7 +96,8 @@ section {
     margin: 10px 0 5px;
 }
 
-#contact form input, #contact form textarea {
+#contact form input,
+#contact form textarea {
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
@@ -129,33 +132,67 @@ footer {
 .foot-logo {
     display: flex;
     align-items: center;
-  
+
 }
 
 .foot-logo img {
     height: 50px;
     margin-right: 10px;
 }
-.foot-section{
+
+.foot-section {
     display: flex;
-    
+
 }
 
-.footer-sections ul li{
+.footer-sections ul li {
     list-style: none;
     color: aqua;
     text-align: left;
     padding: 5px;
-   
+
 }
+
 .footer-sections h2 {
     color: #e0f7fa;
 }
 
-.line{
+.line {
     width: 95%;
     height: 5px;
-    border-bottom: 1px solid rgba(62,62,62,1);
+    border-bottom: 1px solid rgba(62, 62, 62, 1);
     position: absolute;
     margin: 0 33px;
+}
+
+@media (max-width: 300px) {
+    .f300{
+        display: flex;
+        flex-direction: column;
     }
+    .line{
+        margin: 0;
+        width: 100%;
+    }
+}
+@media (min-width: 300px) and (max-width: 600px) {
+    .f600{
+        
+    }
+    
+    .line{
+        margin: 0;
+        width: 100%;
+    }
+    .f300{
+        flex-direction: column;
+        display: flex;
+    }
+    .row{
+        flex-direction: row;
+    }
+    header .row img{
+width:40px;
+height: 40px;
+    }
+}
